# terprime

./: Cargo.toml  README.md
src/: factor.rs  gui.rs  main.rs  mapping.rs  ntheory.rs  prime_math.rs
